# lazy-env

./: README.md  pyproject.toml
lazyenv/: env.template
