[project]
name = "lazyenv"
version = "0.1.0"
readme = "README.md"
description = "A Python library for easier management of environment variables."
authors = [{ name = "Valmont" }]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.8",
    "python-dotenv>=1.0.1",
]

[project.scripts]
lazyenv = "lazyenv:cli.cli"

[tool.bandit]
exclude_dirs = ["tests", "assets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
